--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 <div id="preparation-time">
     <h3>Preparation time</h3>
   <ul>
-    <li><span>Total: Approximately 10 minutes</span></li>
-    <li><span>Preparation: 5 minutes</span></li>
-    <li><span>Cooking: 5 minutes</span></li>
+    <li><span><strong>Total:</strong> Approximately 10 minutes</span></li>
+    <li><span><strong>Preparation:</strong> 5 minutes</span></li>
+    <li><span><strong>Cooking:</strong> 5 minutes</span></li>
   </ul>
 </div>
 <section id="ingredients">
